--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title>Basic Website</title>
     <link rel="stylesheet" href="./assets/styles/styles.css">
 </head>
-<body>
-    Basic Website
+
+<body class="center">
+    
+    <div class="stretch center centerText">
+        Basic Website
+    </div>
+
 </body>
+
 </html>
